crates/hir-ty/tests/snapshots/jls_final_capture__lambda_capture_mutated.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Capture.java:
package com.example;

class Capture {
    void m() {
        int y = 1;
        Runnable r = () -> { int c = y; };
        y = 2;
    }
}

method m(): void
  @5:37..5:38 'y': variable-must-be-effectively-final: Variable 'y' used in lambda expression should be final or effectively final
