crates/hir-ty/tests/snapshots/jls_final_capture__lambda_param_shadows_method_param.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Shadow.java:
package com.example;

import java.util.function.Predicate;

class Shadow {
    void go(Predicate<String> p) {}

    void m(String i) {
        go(i -> i == "");
    }
}

method m(java.lang.String): void
  @8:11..8:12 'i': duplicate-declaration: Variable 'i' is already defined in the scope
