crates/hir-ty/tests/snapshots/jls_final_capture__nested_lambda_distinct_params.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Shadow.java:
package com.example;

import java.util.function.Consumer;

class Shadow {
    void h(Consumer<String> c) {}
    void sink(String s) {}

    void m() {
        h(i -> h(j -> {
            sink(i + j);
        }));
    }
}
