crates/hir-ty/tests/snapshots/jls_final_capture__nested_lambda_param_shadows_outer.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Shadow.java:
package com.example;

import java.util.function.Consumer;

class Shadow {
    void h(Consumer<String> c) {}
    void sink(String s) {}

    void m() {
        h(i -> h(i -> {
            sink(i);
        }));
    }
}

method m(): void
  @9:17..9:18 'i': duplicate-declaration: Variable 'i' is already defined in the scope
